fix(nav): prevent profile pic squeeze on mobile

--- a/src/app/navmenu/navmenu.component.css
+++ b/src/app/navmenu/navmenu.component.css
@@ -15,6 +15,7 @@
     height: 40px;
     margin-right: 10px;
     margin-top: -3px;
+    flex: 0 0 40px;
 }
 
 #ldap {
